Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.8.0
-
macOS 10.12
-
6fecfdc769314162d6c909c9ae0a85631964883f (qt/qtdeclarative/dev)
Description
When using console.log(), it is not utilizing any registered custom debug stream operators for custom types. They work fine on the C++ side but on the QML side it will just output:
QVariant(CustomType)
Attachments
Issue Links
- relates to
-
QTBUG-92194 Use an object's operator<<(QDebug) when passed to print()/console.log()
- Open