Use custom debug stream operator in console.log

Fallback for string-conversion was previously using hard-coded string
template mimicing QVariant. Just use QVariant's debug stream operator
which may include data from the contained type.

Change-Id: I8243ba6b04d842a895ac3234bb54f6a4eed849f1
Fixes: QTBUG-60057
Done-With: Jędrzej Nowacki <jedrzej.nowacki@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>